# mcp

./: README.md
chatui/sales-agent-ui/: README.md  next.config.ts  package-lock.json  package.json
chatui/sales-agent-ui/app/: assistant.tsx  layout.tsx
chatui/sales-agent-ui/app/api/chat/: route.ts
chatui/sales-agent-ui/app/api/product-info/: route.ts
chatui/sales-agent-ui/app/api/test/: route.ts
chatui/sales-agent-ui/app/tool/: getWeather.tsx
chatui/sales-agent-ui/app/utils/: productCrawler.ts
chatui/sales-agent-ui/components/: product-link-grid.tsx  product-link.tsx
chatui/sales-agent-ui/components/assistant-ui/: thread.tsx
mcp-client/: README.md  bedrock_mcp_client.py  pyproject.toml  strand_sdk_mcp_client.py  test  us-east-1-models.json  us-west-2-models.json
mcp-client/.amazonq/: mcp.json
mcp-client/aws-sa-helper/: pyproject.toml
mcp-client/aws-sa-helper/src/: sa_agent.py
mcp-client/products/: sales_by_sdk.py  strand_sdk_mcp_client.py
mcp-client/sample-agents/: .env  strand_sdk_mcp_client.py  swram-agents.py
mcp-client/shopify-sales-agent/: README.md  pyproject.toml
mcp-client/shopify-sales-agent/src/: design.py  producst_app_gradio.py  sales_agents.py  sales_by_sdk.py  test.py
mcp-client/shopify-sales-agent/src/shopify_sales_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp-server/: pyproject.toml  test.js
mcp-server/example-pkg/: pyproject.toml
mcp-server/mcp-shopify-products/: README.md  pyproject.toml
mcp-server/mcp-shopify-products/src/products_repository/: __init__.py  shopify_products.py
mcp-server/mcp-shopify-products/src/test/: mcp_test.py  test_shopify_products.py
mcp-server/plazared-shopify-products/: pyproject.toml
mcp-server/plazared-shopify-products/src/products_repository/: __init__.py  shopify_products.py
mcp-server/src/plazared-jackery-product/: products_by_crawl.py  pyproject.toml  test.html
mcp-server/src/plazared-shopify-products/: products.csv  products_by_crawl.py  pyproject.toml  simple.py  test.py  test_products_by_crawl.py
